# cryptodb-c

./: .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TECHNICAL.md  demo.sh
docs/: threat_model.md
include/: cipher.h  crypto_utils.h  database.h
sql/: schema.sql
src/: cipher.c  crypto_utils.c  database.c  main.c
src/crypto/: aes_openssl.c  aes_openssl.h  cbc.c  cbc.h  padding.c  padding.h  xorfeistel.c  xorfeistel.h
src/db/: pg_store.c  pg_store.h
src/util/: hex.c  hex.h  secure_mem.c  secure_mem.h
tools/: cryptodb_bench.c  cryptodb_cli.c
